--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -61,8 +61,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -83,10 +83,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
     </dependencies>
 
@@ -111,7 +107,7 @@
                 <version>3.4.2</version>
                 <configuration>
                     <to>
-                        <image>sergiogrs/${project.artifactId}:s6</image>
+                        <image>sergiogrs/${project.artifactId}:s7</image>
                     </to>
                 </configuration>
             </plugin>
