--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -94,6 +94,14 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -117,7 +125,7 @@
                 <version>3.4.2</version>
                 <configuration>
                     <to>
-                        <image>sergiogrs/${project.artifactId}:s6</image>
+                        <image>sergiogrs/${project.artifactId}:s8</image>
                     </to>
                 </configuration>
             </plugin>
