--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -101,6 +101,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>4.2.0</version>
         </dependency>
     </dependencies>
 
@@ -125,7 +126,7 @@
                 <version>3.4.2</version>
                 <configuration>
                     <to>
-                        <image>sergiogrs/${project.artifactId}:s8</image>
+                        <image>sergiogrs/${project.artifactId}:s9</image>
                     </to>
                 </configuration>
             </plugin>
